[project]
name = "mypackage"
version = "0.0.1"
dependencies = [
]

[project.optional-dependencies]
dev = [
    "pytest",
    "bumpver",
    "pre-commit",
]

[tool.bumpver]
current_version = "v0.0.1"
version_pattern = "vMAJOR.MINOR.PATCH[GITHASH]"
commit_message = "bump version {old_version} -> {new_version}"
commit = false
tag = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    '^version = "{pep440_version}"',
    '^current_version = "{version}"',
]
"mypackage/__init__.py" = [
    "^__version__ = '{pep440_version}'",
]

[tool.isort]
line_length = 120
include_trailing_comma = true
force_single_line = true
indent = 4

[tool.mypy]
pretty = true
show_traceback = true
color_output = true
allow_redefinition = false
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
